# python-project-52

./: .gitignore  README.md  build.sh  makefile  pyproject.toml  render.yaml
task_manager/: forms.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: mydump.json  olddump.json
task_manager/locale/ru/LC_MESSAGES/: django.po
task_manager/locale/ru_RU/LC_MESSAGES/: django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/statuses/: create.html  index.html  remove.html  update.html
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_author_task_description_task_executor_and_more.py  0003_task_date_of_creation.py  0004_alter_task_author_alter_task_executor_and_more.py
task_manager/tasks/templates/tasks/: create.html  details.html  index.html  remove.html  update.html
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/registration/: login.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: fixture.json
task_manager/users/templates/users/: index.html  remove.html  signin.html  signup.html  update.html
